--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
+    "@oclif/plugin-not-found": "^1.2.4",
+    "@oclif/plugin-update": "^1.3.10",
     "tslib": "^1"
   },
   "devDependencies": {
@@ -42,7 +44,9 @@
     "commands": "./lib/commands",
     "bin": "dops",
     "plugins": [
-      "@oclif/plugin-help"
+      "@oclif/plugin-help",
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-update"
     ]
   },
   "repository": "doptools/cli",
