upload release file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,9 +35,11 @@ jobs:
           if [ -z "${{ steps.version.outputs.prerelease }}" ]; then
              echo "Is Release"
              echo "::set-output name=prerelease::false"
+             echo "::set-output name=tarPath::./dist/dops-${{ steps.version.outputs.fullversion }}/dops-${{ steps.version.outputs.fullversion }}"
            else
-              echo "Is Prerelease"
+             echo "Is Prerelease"
              echo "::set-output name=prerelease::true"
+             echo "::set-output name=tarPath::./dist/channels/${{ steps.version.outputs.prerelease }}/dops-${{ steps.version.outputs.fullversion }}/dops-${{ steps.version.outputs.fullversion }}"
            fi
 
       - name: Install
@@ -66,3 +68,14 @@ jobs:
             Generated Release ${{ github.ref }}
           draft: false
           prerelease: ${{ steps.config.outputs.prerelease }}
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ${{ steps.config.outputs.tarPath }}.tar.gz
+          asset_name: dops-cli-${{ steps.version.outputs.fullversion }}.tar.gz
+          asset_content_type: application/gzip
