--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@oclif/command": "^1",
     "@oclif/config": "^1",
+    "@oclif/plugin-autocomplete": "^0.3.0",
     "@oclif/plugin-help": "^3",
     "@oclif/plugin-not-found": "^1.2.4",
+    "@oclif/plugin-plugins": "^1.9.5",
     "@oclif/plugin-update": "^1.3.10",
     "tslib": "^1"
   },
@@ -43,11 +45,11 @@
   "oclif": {
     "commands": "./lib/commands",
     "bin": "dops",
-    
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-not-found",
-      "@oclif/plugin-update"
+      "@oclif/plugin-update",
+      "@oclif/plugin-plugins"
     ]
   },
   "repository": "doptools/cli",
