--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "bin": {
     "dops": "./bin/run"
   },
+  "schematics": "./src/collection.json",
   "bugs": "https://github.com/doptools/cli/issues",
   "dependencies": {
+    "@angular-devkit/schematics": "^11.2.0",
+    "@doptools/tslib-cli-core": "^0.0.0-dev.1",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-autocomplete": "^0.3.0",
     "@oclif/plugin-help": "^3",
     "@oclif/plugin-not-found": "^1.2.4",
-    "@oclif/plugin-plugins": "^1.9.5",
     "@oclif/plugin-update": "^1.3.10",
     "tslib": "^1"
   },
@@ -25,8 +27,8 @@
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
     "rimraf": "^3.0.2",
-    "ts-node": "^8",
-    "typescript": "^3.3"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -48,11 +50,11 @@
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-not-found",
-      "@oclif/plugin-update",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-update"
     ],
     "hooks": {
-      "version:apply": "./lib/hooks/version/apply"
+      "version:apply": "./lib/hooks/version/apply",
+      "init": "./lib/hooks/init/load-local-plugins"
     }
   },
   "repository": "doptools/cli",
