--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
   "schematics": "./src/collection.json",
   "bugs": "https://github.com/doptools/cli/issues",
   "dependencies": {
-    "@angular-devkit/schematics": "^11.2.0",
+    "@angular-devkit/schematics": "^11.2.1",
     "@doptools/tslib-cli-core": "^0.0.0-dev.1",
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/plugin-autocomplete": "^0.3.0",
-    "@oclif/plugin-help": "^3",
+    "@oclif/command": "^1.8.0",
+    "@oclif/config": "^1.17.0",
+    "@oclif/plugin-help": "^3.2.2",
     "@oclif/plugin-not-found": "^1.2.4",
     "@oclif/plugin-update": "^1.3.10",
-    "tslib": "^1"
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@types/node": "^10",
+    "@oclif/dev-cli": "^1.26.0",
+    "@types/node": "14",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
