--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@oclif/plugin-help": "^3.2.2",
     "@oclif/plugin-not-found": "^1.2.4",
     "@oclif/plugin-update": "^1.3.10",
+    "resolve-package-path": "^3.1.0",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
