--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -18,6 +18,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
+          always-auth: true
+          scope: "doptools"
+        env:
+          NODE_AUTH_TOKEN: ${{ github.token }}
 
       - name: Install
         run: yarn install
