new local/global switch logic

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "repository": "doptools/cli",
   "scripts": {
+    "postinstall": "dops plugins:_init",
     "postpack": "rimraf oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
