--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install
         run: |
-          yarn global add ts-node
+          yarn global add ts-node typescript
           yarn install
 
       - name: Run Help
