--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "repository": "doptools/cli",
   "scripts": {
-    "preinstall": "ts-node -p tsconfig.json ./bin/install",
+    "preinstall": "./bin/install",
     "postpack": "rimraf oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
