--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@doptools/cli",
   "description": "build and deployment tools",
-  "version": "0.0.0-dev.7",
+  "version": "0.0.0-dev.8",
   "author": "Dan Erdelt @myrddraall",
   "bin": {
     "dops": "./bin/run"
@@ -62,8 +62,7 @@
       "@oclif/plugin-not-found",
       "@oclif/plugin-update"
     ],
-    "hooks": {
-    }
+    "hooks": {}
   },
   "repository": "doptools/cli",
   "scripts": {
