--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -6,6 +6,8 @@ on:
       - "**"
     tags-ignore:
       - "**"
+env:
+  NODE_VERSION: 14.x
 
 jobs:
   # Push image to GitHub Packages.
@@ -17,19 +19,20 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "${{ env.NODE_VERSION }}"
           registry-url: https://npm.pkg.github.com/
           always-auth: true
-          scope: "doptools"
-        env:
-          NODE_AUTH_TOKEN: ${{ github.token }}
+          scope: ${{ github.owner }}
 
       - name: Install
-        run: |
-          yarn global add ts-node typescript
-          yarn install
+        env:
+          NODE_AUTH_TOKEN: ${{ github.token }}
+        run: yarn
 
-      - name: Run Help
+      - name: Build
         run: |
-          chmod +x ./bin/run
-          ./bin/run help
+          yarn run prepack
+          ls -al ./lib
+
+    #  - name: Run
+    #    run: yarn run dryrun test-env --no-interactive
