--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -27,12 +27,11 @@ jobs:
       - name: Install
         env:
           NODE_AUTH_TOKEN: ${{ github.token }}
-        run: yarn
+        run: |
+          yarn global add lerna
+          lerna bootstrap
 
       - name: Build
-        run: |
-          yarn run prepack
-          ls -al ./lib
+        run: lerna run prepack
 
-    #  - name: Run
-    #    run: yarn run dryrun test-env --no-interactive
+ 
