--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,17 +35,16 @@ jobs:
       - name: Install
         env:
           NODE_AUTH_TOKEN: ${{ github.token }}
-        run: yarn
-
-      - name: Build
         run: |
-          yarn version --no-git-tag-version --new-version ${{ steps.version.outputs.full }}
-          yarn run prepack
+          yarn global add lerna
+          npx lerna bootstrap 
 
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ github.token }}
-        run: yarn publish --access ${{ env.PACKAGE_ACCESS }}
+        run: |
+          npx lerna version --no-git-tag-version --no-commit-hooks --no-push ${{ steps.version.outputs.full }}
+          npx lerna publish --no-git-reset
 
       - name: Create Release
         id: create_release
