--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ github.token }}
         run: |
-          npx lerna version --no-git-tag-version --no-commit-hooks --no-push ${{ steps.version.outputs.full }}
+          npx lerna version --no-git-tag-version --no-commit-hooks --no-push --yes ${{ steps.version.outputs.full }}
           npx lerna publish --no-git-reset
 
       - name: Create Release
