--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,11 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "publish": {
+      "registry": "https://npm.pkg.github.com"
+    }
+  },
   "npmClient": "yarn",
   "version": "0.0.0-dev.11"
 }
