--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -74,7 +74,8 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "echo NO TESTS",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "build": "yarn run prepack && yarn run prepack"
   },
   "types": "lib/index.d.ts"
 }
