--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.0-dev.16",
   "scripts": {
-    "build": "lerna run build",
-    "publish": "lerna run build"
+    "publish": "lerna publish --no-git-reset --no-git-tag-version --no-commit-hooks --no-push --yes",
+    "postinstall": "lerna bootstrap",
+    "build": "lerna run build"
   },
   "devDependencies": {
     "lerna": "^3.22.1"
