--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-dev.17",
   "description": "",
   "main": "dist/lib/core.js",
-  "types": "dist/typescore.d.ts",
+  "types": "dist/types/core.d.ts",
   "schematics": "./src/lib/schematics/collection.json",
   "files": [
     "dist"
