--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "author": "Dan Erdelt <erd@conceptual.ca>",
-  "repository": "doptools/cli",
+  "repository": "https://github.com/doptools/cli",
   "engines": {
     "node": ">=6.0.0"
   },
