--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0-dev.21",
   "scripts": {
-    "publish": "lerna publish --no-git-tag-version --no-commit-hooks --no-push --force-publish --yes",
+    "publish": "lerna publish --no-git-tag-version --no-commit-hooks --no-push --force-publish --yes --graph-type all ",
     "postinstall": "lerna bootstrap",
     "build": "lerna exec yarn build"
   },
