refactored startup and install

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,7 +75,7 @@
     "prepack": "rimraf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "echo NO TESTS",
     "version": "oclif-dev readme && git add README.md",
-    "build": "yarn run prepack && yarn run prepack"
+    "build": "yarn run prepack"
   },
   "types": "lib/index.d.ts"
 }
