--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     "@types/inquirer": "^7.3.1",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "14.14.30",
+    "@types/npm-package-arg": "^6.1.0",
     "@types/rollup-plugin-json": "^3.0.2",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^2.2.1",
@@ -49,6 +50,7 @@
     "colors": "^1.4.0",
     "inquirer": "^7.3.3",
     "jsonc": "^2.0.0",
+    "npm-package-arg": "^8.1.1",
     "rxjs": "^6.6.3",
     "string-argv": "^0.3.1",
     "tslib": "^2.1.0",
