--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,23 +1,9 @@
 {
+  "extends": "../../tsconfig",
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2019",
-    "moduleResolution": "node",
+    "baseUrl": ".",
     "outDir": "lib",
     "rootDir": "src",
-    "strict": true,
-    "strictNullChecks": true,
-    "importHelpers": true,
-    "allowSyntheticDefaultImports": true,
-    "preserveSymlinks": true,
-    "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "declaration": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
   },
   "include": [
     "src/**/*"
