--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/doptools/cli#readme",
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/inquirer": "^7.3.1",  
+    "@types/inquirer": "^7.3.1",
     "@types/node": "14.14.30",
     "@types/npm-package-arg": "^6.1.0",
     "rimraf": "^3.0.2",
@@ -44,6 +44,7 @@
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3",
     "jsonc": "^2.0.0",
+    "multimatch": "^5.0.0",
     "npm-package-arg": "^8.1.1",
     "resolve-package-path": "^3.1.0",
     "rxjs": "^6.6.3",
