--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/doptools/cli#readme",
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/hosted-git-info": "^3.0.1",
     "@types/inquirer": "^7.3.1",
     "@types/node": "14.14.30",
     "@types/npm-package-arg": "^6.1.0",
@@ -40,8 +41,10 @@
   "dependencies": {
     "@angular-devkit/schematics": "^11.2.1",
     "@oclif/command": "^1.8.0",
+    "@oclif/config": "^1.17.0",
     "@oclif/parser": "^3.8.5",
     "chalk": "^4.1.0",
+    "hosted-git-info": "^3.0.8",
     "inquirer": "^7.3.3",
     "jsonc": "^2.0.0",
     "multimatch": "^5.0.0",
