--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "publish": "lerna publish --no-git-tag-version --no-commit-hooks --no-push --force-publish --yes --graph-type all ",
     "postinstall": "lerna bootstrap",
     "build": "lerna run build",
+    "clean": "lerna clean",
+    "install": "lerna bootstrap",
+    "reset": "yarn run clean && yarn run install",
     "start": "lerna run --stream --parallel start"
   },
   "devDependencies": {
