--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "version": "0.0.0-dev.30",
+  "version": "0.0.0",
   "workspaces": [
     "packages/*",
     "plugins/*"
