--- a/plugins/plugin-workspace/package.json
+++ b/plugins/plugin-workspace/package.json
@@ -22,7 +22,8 @@
     ],
     "dependencies": {
         "@angular-devkit/core": "^11.2.2",
-        "@angular-devkit/schematics": "^11.2.2"
+        "@angular-devkit/schematics": "^11.2.2",
+        "@oclif/plugin-legacy": "^1.2.0"
     },
     "devDependencies": {
         "@angular-devkit/schematics-cli": "^0.1102.2",
