--- a/plugins/plugin-workspace/package.json
+++ b/plugins/plugin-workspace/package.json
@@ -33,15 +33,18 @@
     "dependencies": {
         "@angular-devkit/core": "^11.2.2",
         "@angular-devkit/schematics": "^11.2.2",
+        "@doptools/cli-core": "^0.1.3-dev.1",
         "@oclif/command": "^1.8.0",
         "@oclif/config": "^1.17.0"
     },
     "devDependencies": {
         "@angular-devkit/schematics-cli": "^0.1102.2",
+        "@doptools/cli": "^0.0.0-dev.7",
         "@oclif/dev-cli": "1.26.0",
         "@oclif/plugin-help": "3.2.2",
         "@types/gulp": "^4.0.8",
         "@types/node": "^14.14.31",
+        "glob": "^7.1.6",
         "gulp": "^4.0.2",
         "json-schema-to-typescript": "^10.1.3",
         "npm-run-all": "^4.1.5",
