--- a/plugins/plugin-workspace/package.json
+++ b/plugins/plugin-workspace/package.json
@@ -10,8 +10,13 @@
         "build": "run-s build:*",
         "build:schema": "gulp buildSchema",
         "build:ts": "tsc -p tsconfig.plugin.json",
-        "prepack": "yarn run clean && yarn run build && oclif-dev manifest && oclif-dev readme",
-        "postpack": "rm -f oclif.manifest.json",
+        "prepack": "run-s prepack:*",
+        "prepack:clean": "yarn clean",
+        "prepack:build": "yarn build",
+        "prepack:manifest": "oclif-dev manifest",
+        "prepack:readme": "oclif-dev readme",
+        "postpack": "run-s postpack:*",
+        "postpack:manifest": "rm -f oclif.manifest.json",
         "xversion": "oclif-dev readme && git add README.md",
         "start": "run-p start:*",
         "start:schema": "gulp",
