--- a/plugins/plugin-workspace/tsconfig.plugin.json
+++ b/plugins/plugin-workspace/tsconfig.plugin.json
@@ -6,9 +6,10 @@
       "dom"
     ],
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "lib",
+    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "target": "es6"
+    "target": "es2017"
   },
   "include": [
     "src/**/*"
