--- a/plugins/plugin-workspace/package.json
+++ b/plugins/plugin-workspace/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@doptools/plugin-workspace",
     "version": "0.0.0",
-    "schematics": "./src/collection.json",
+    "scope": "@doptools",
+    "schematics": "./lib/schematics.json",
     "bugs": "https://github.com/doptools/cli/issues",
     "homepage": "https://github.com/doptools/cli",
     "repository": "https://github.com/doptools/cli",
@@ -10,6 +11,8 @@
         "build": "run-s build:*",
         "build:schema": "gulp buildSchema",
         "build:ts": "tsc -p tsconfig.plugin.json",
+        "build:copy": "gulp copyFiles",
+        "version": "echo TODO: update version.json",
         "prepack": "run-s prepack:*",
         "prepack:clean": "yarn clean",
         "prepack:build": "yarn build",
@@ -23,7 +26,7 @@
         "start:ts": "tsc -p tsconfig.plugin.json -w"
     },
     "oclif": {
-        "commands": "./dist/commands",
+        "commands": "./lib/commands",
         "bin": "dops",
         "devPlugins": [
             "@oclif/plugin-help"
@@ -36,17 +39,14 @@
         "/yarn.lock"
     ],
     "dependencies": {
-        "@angular-devkit/core": "^11.2.2",
-        "@angular-devkit/schematics": "^11.2.2",
-        "@doptools/cli-core": "^0.1.3-dev.1",
-        "@oclif/command": "^1.8.0",
-        "@oclif/config": "^1.17.0"
+        "@angular-devkit/core": "^11.2.3",
+        "@angular-devkit/schematics": "^11.2.3",
+        "hosted-git-info": "^3.0.8"
     },
     "devDependencies": {
-        "@angular-devkit/schematics-cli": "^0.1102.2",
-        "@doptools/cli": "^0.0.0-dev.7",
+        "@angular-devkit/schematics-cli": "^0.1102.3",
+        "@doptools/cli-core": "^0.1.3-dev.1",
         "@oclif/dev-cli": "1.26.0",
-        "@oclif/plugin-help": "3.2.2",
         "@types/gulp": "^4.0.8",
         "@types/node": "^14.14.31",
         "glob": "^7.1.6",
@@ -54,7 +54,6 @@
         "json-schema-to-typescript": "^10.1.3",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
-        "ts-node": "^9.1.1",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
         "tslint-config-standard": "^9.0.0",
