--- a/plugins/plugin-workspace/tsconfig.json
+++ b/plugins/plugin-workspace/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "resolveJsonModule": true
+  },
   "include": [
     "src/**/*"
   ],
