--- a/plugins/plugin-workspace/package.json
+++ b/plugins/plugin-workspace/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@doptools/plugin-workspace",
-    "version": "0.0.0",
+    "version": "0.0.1-0",
     "scope": "@doptools",
     "schematics": "./lib/schematics.json",
     "bugs": "https://github.com/doptools/cli/issues",
